# mp-spdz-async-orchestration

./: .gitignore  .gitmodules  CMakeLists.txt  DATA_PROVIDER_DOCUMENTATION.md  DEMO_GUI_DOCUMENTATION.md  LICENSE  README.md  ROBUSTNESS_DATA_PROVIDER.md  backend_test_summary.txt  demo_automated.sh  demo_gui.py
common/: CMakeLists.txt
common/include/common/: crypto.hpp  messages.hpp  serialize.hpp  types.hpp
common/src/: crypto.cpp  messages.cpp  serialize.cpp
consensus/: CMakeLists.txt
consensus/src/: ack_crypto_tool.cpp  consensus.cpp
docs/: architecture.md  async_compute_only_plan.md  protocol.md
inputs/: provider_1.txt  provider_2.txt
node/: CMakeLists.txt
node/include/node/: data_provider.hpp
node/src/: data_provider.cpp  main.cpp  test_data_provider.cpp
programs/: avg.mpc  hello_mpc.mpc  issue_secrets.mpc  parity_sum.mpc  sanity_sum.mpc  sum.mpc  sum_plus_one.mpc  triple_sum.mpc
schemas/: ack.schema.json  core_set.schema.json  justification.schema.json
scripts/: async_orchestrator.py  full_system_validation_wsl.sh  run_async_round_wsl.sh  run_bridge_wsl.sh  test_ack_scenarios_wsl.sh
spdz_bridge/: CMakeLists.txt
spdz_bridge/src/: playersdata.cpp  spdz_bridge.cpp  test_backends.sh
tests/: CMakeLists.txt
